--- a/project-6/registration.html
+++ b/project-6/registration.html
@@ -98,23 +98,10 @@
         <input type="tel" name="m" pattern="[0-9]{10}" ><br>
         address:*<br>
         <input type="text" name="ad" ><br>
-      joining date:*<br><input type="date" name="m" ><br>
+      email:<br><input type="email" name="e"><br>
         gender:*<br>
         <input type="radio" name="m">male<br>
                <input type="radio" name="f">female<br></p2>
-        
-        <p3>branch:*<br>
-        <input type="checkbox" name="a">AIDS<br>
-                    <input type="checkbox" name="a">AIML<br>
-                    <input type="checkbox" name="a">CSE<br>
-                    <input type="checkbox" name="a">ECE<br></p3>
-        <p4>domain:*<br>
-        <select name="d">
-            <br><option value="aws">aws</option>
-            <option value="data">data</option>
-            <option value="html">html</option>
-            <option value="machine">machine</option><br>
-        </select></p4>
         <br><div style="padding-bottom:18px"><br><input name="skip_submit" value="submit" type="submit"/></div> 
     </hr>
     </center>
